# fc

./: .gitignore  6a34f9fb61b0abb8f82253e7_multi-agent-freecad-methodology.md  AGENTS.md  AGENT_TEAM_SUMMARY.md  ARCHITECTURE.md  CLAUDE.md  CODEX_SYNC_GUIDE.md  COMPLETENESS_REPORT.md  DECISIONS.md  E2E_AGENT_TEST_REPORT.md  IMPROVEMENT_PLAN.md  PROJECT.md  README.md  REVIEW_REPORT.md  ROADMAP.md  SKILL.md  TASKS.md  TASKS_E2E_AGENT.md  conftest.py  findings.md  mkdocs.yml  progress.md  pyproject.toml  task_plan.md
.agents/skills/fc/: CORE.md  ENGINEERING.md  EXAMPLES.md  MODELING.md  SKILL.md
.claude/: settings.local.json
.claude/agent-memory/fc-test-agent/: MEMORY.md  (+2 more)
.claude/agents/: code-qa-inspector.md  fc-cli-agent.md  fc-core-agent.md  fc-mcp-agent.md  fc-review-agent.md  fc-runtime-agent.md  fc-test-agent.md
.claude/workflows/: headless-backend-batch.js
.github/workflows/: ci.yml
docs/: ERROR_RULES.md  EXECUTION_FLOW_TEMPLATE.md  TOOL_SCHEMA.json  VISUAL_VERIFICATION_PROTOCOL.md
docs/skills/: SKILL.md
docs_mkdocs/docs/: CONTEXT_INJECTION_PROTOCOL.md  FUNCTION_SCHEMAS.json  SKILL.md  api.md  architecture.md  decisions.md  getting-started.md  index.md  installation.md  mcp.md  roadmap.md
examples/plugins/: hello_plugin.py
scripts/: analyze_step.py  analyze_step_fc.py  analyze_step_v2.py  analyze_step_v3.py  fc_batch_import_step.py  generate_function_schemas.py  inject_gui.py  make_assembly_drawing.py  quick_draw.py  quick_draw_v2.py  sw_batch_export_step.ps1  verify_gui.py
site/: 404.html
site/docs/: index.html
site/search/: search_index.json
(+86 files in other folders)
